# rag-backend

./: .env.example  .gitignore  CRUSH.md  README.md  config.json  pyproject.toml  run.py
src/rag_backend/: app.py
src/rag_backend/api/: completions.py
src/rag_backend/models/: config.py
src/rag_backend/services/: config_manager.py  pipeline.py  vector_db.py
tests/: test_basic.py
